# thewalter.app

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
feed/: admin.py  apps.py  middlewares.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
feed/forms/: __init__.py  activation.py  collection.py  feed.py  registration.py
feed/migrations/: 0001_initial.py  0002_remove_feed_guid_remove_feeditem_guid.py  0003_alter_feeditem_options_feed_created_by.py  0004_usersettings.py  0005_remove_usersettings_hidden_feeds_and_more.py  0006_waitlistrequest.py  0007_waitlistrequest_user.py  0008_waitlistrequest_created_at_and_more.py  0009_waitlistrequest_invite_accepted_and_more.py  0010_remove_waitlistrequest_invite_accepted_and_more.py  0011_remove_feed_created_by_feed_subscribers.py  0012_feed_icon.py  0013_alter_feed_icon.py  0014_attachment.py  0015_feeditem_has_paid_content.py  0016_usersettings_liked_feed_items_alter_feeditem_link_and_more.py  0017_alter_feed_rss_url_alter_feed_url_and_more.py  0018_alter_feeditem_feed_servicefeed.py  0019_alter_attachment_type_alter_servicefeed_type.py  0020_alter_feed_options_alter_feed_description.py  0021_alter_feed_description.py  0022_alter_feeditem_title.py  0023_feeditem_preview_alter_feeditem_link.py  0024_alter_feeditem_preview.py  0025_alter_usersettings_user.py  0026_alter_usersettings_user.py  0027_collection.py  0028_remove_collection_feed_items_collection_feeds.py  0029_collection_slug_collection_unique_name_per_user.py  0030_alter_servicefeed_type_feeditemaction.py  0031_delete_servicefeed.py  0032_alter_collection_feeds_alter_collection_slug.py
feed/static/feed/: site.webmanifest
feed/templates/: base.html  index.html
feed/templates/blocks/: logout.html  page-heading.html
feed/templates/dialogs/: base.html  hide.html
feed/templates/django_registration/: activation_complete.html  activation_email_body.html  activation_email_body.txt  (+4 more)
feed/templatetags/: url_with_filters.py
feed/utils/: enums.py  feed_parsers.py  feed_validators.py  helpers.py
feed/views/: __init__.py  api.py  feed.py  index.py  mixins.py  waitlist.py
frontend/: .gitignore  package-lock.json  package.json  urls.py  views.py  vite.config.ts
frontend/forms/: __init__.py
frontend/public/: site.webmanifest
frontend/src/: App.vue  main.ts
frontend/templates/: base.html  index.html  main.html  spa.html  test.html
frontend/templatetags/: vite.py
frontend/views/: __init__.py  decorators.py  index.py  mixins.py  spa.py
infra/local/: Dockerfile  start
walter/: asgi.py  celery.py  settings.py  urls.py  worker.py  wsgi.py
(+215 files in other folders)
