[tool.poetry]
name = "walter"
version = "0.1.0"
description = ""
authors = ["Mikhail Ivanov <ya.ivanov-m2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.0.5"
feedparser = "^6.0.11"
watchfiles = "^0.22.0"
django-celery-beat = "^2.6.0"
rules = "^3.4"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pre-commit = "^3.7.1"

[tool.ruff]
target-version = "py310"
exclude = [".yaml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
