[tool.poetry]
name = "walter"
version = "0.1.0"
description = ""
authors = ["Mikhail Ivanov <ya.ivanov-m2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
django = "^5.1.3"
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.2.0"
feedparser = "^6.0.11"
watchfiles = "^0.24.0"
django-celery-beat = "^2.6.0"
rules = "^3.4"
gunicorn = "^23.0.0"
python-slugify = "^8.0.4"
sentry-sdk = "^2.18.0"
articulo = "0.5.1"
django-celery-results = "^2.5.1"
pysocks = "^1.7.1"
django-registration = "^5.1.0"
django-debug-toolbar = "^4.4.6"
djangorestframework = "^3.15.2"
psycopg = "^3.2.4"
psycopg-pool = "^3.2.4"
gevent = "^24.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pre-commit = "^3.7.1"

[tool.ruff]
target-version = "py310"
exclude = [".yaml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
