[project]
name = "walter"
version = "0.1.0"
description = ""
authors = [{ name = "Mikhail Ivanov", email = "ya.ivanov-m2014@yandex.ru" }]
requires-python = "==3.10.9"
readme = "README.md"
dependencies = [
    "django>=5.1.3,<6",
    "celery>=5.4.0,<6",
    "flower>=2.0.1,<3",
    "redis>=5.2.0,<6",
    "feedparser>=6.0.11,<7",
    "watchfiles>=0.24.0,<0.25",
    "django-celery-beat>=2.6.0,<3",
    "rules>=3.4,<4",
    "gunicorn>=23.0.0,<24",
    "python-slugify>=8.0.4,<9",
    "sentry-sdk>=2.18.0,<3",
    "articulo==0.5.1",
    "pysocks>=1.7.1,<2",
    "django-registration>=5.1.0,<6",
    "django-debug-toolbar>=4.4.6,<5",
    "djangorestframework>=3.15.2,<4",
    "psycopg>=3.2.4,<4",
    "psycopg-pool>=3.2.4,<4",
    "uvicorn>=0.34.0,<0.35",
    "uvicorn-worker>=0.3.0,<0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.4.8,<0.5",
    "pre-commit>=3.7.1,<4",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"
exclude = [".yaml"]
